--- a/css/center-vertically/table-cell.html
+++ b/css/center-vertically/table-cell.html
@@ -6,8 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>容器固定(确定的)宽高 + table-cell</title>
+
+
   <style>
+
     .container {
+      /* table-cell控制文本垂直、水平居中 */
       display: table-cell;
       vertical-align: middle;
       text-align: center;
@@ -22,6 +26,7 @@
       line-height: 60px;
       font-size: 18px;
       background: yellowgreen;
+      /* 使盒子变成文本 inline */
       display: inline-block;
     }
   </style>
